test/tests/bad/type-inst-arity-mismatch.carth
;; TypeInstArityMismatch

(data (Foo a) (Foo a))
(data Bar (Bar Foo))
